= 0.19.3 / 2012-12-21

  * Fixed a bug with decoding session cookies when they contained a double
    hyphen (thanks @CrypticSwarm)
  * Added the ability to get a Buffer from mock.call (thanks @jeffbski)

= 0.19.2 / 2012-11-29

  * Fixed a bug that prevented the build middleware from accepting a "default"
    app to use instead of utils.notFound (thanks @jeffbski)
  * HEAD requests always have the Transfer-Encoding header set the same as the
    equivalent GET (thanks @jeffbski)
  * Upgrade to BufferedStream 1.4.1

= 0.19.1 / 2012-11-10

  * HEAD requests now preserve the value of the Content-Length header (thanks
    @jeffbski)

= 0.19.0 / 2012-10-19

  * strata.maxBufferSize can be used to set the maximum input buffer size for
    new incoming requests.
  * bin/strata now serves the current directory by default when an app.js file
    cannot be found (thanks @iammerrick).
  * bin/strata will try to serve index.html when serving a directory.
  * Renamed utils.isSafe to utils.isSafeRequestMethod.
  * Renamed utils.HTTP_STATUS_CODES to utils.STATUS_CODES.
  * Renamed utils.HTTP_STATUS_MESSAGES to utils.STATUS_MESSAGES.

= 0.18.1 / 2012-10-08

  * Do not enforce header value type in the lint middleware.

= 0.18.0 / 2012-10-07

  * The input stream is paused by default.
  * Don't wrap the input stream in a BufferedStream.
  * strata.authenticityToken always generates a token, even on GET requests.
  * Added the ability to pass a params object to mock.env.
  * Added headers object to the environment instead of http* properties.
  * remotePort/serverPort environment variables are numbers.
  * Renamed utils.emptyBody to utils.isEmptyBodyStatus.
  * Removed the querystring module.
  * Removed utils.isRegExp in favor of node's util.isRegExp.
  * Use mocha instead of vows for testing.

= 0.17.0 / 2012-09-03

  * Added strata.authenticityToken middleware.
  * Renamed strata.authBasic to strata.basicAuth.