@@ -431,20 +431,15 @@ Request.prototype.body = function (callback) {
   var input = env.input;
 
   if (this.mediaType === 'application/json') {
-    var buffer = '';
-
-    input.on('data', function (chunk) {
-      buffer += chunk.toString();
-    });
-
-    input.on('end', function () {
+    utils.bufferStream(input, function (err, buffer) {
       try {
-        var body = JSON.parse(buffer);
-        env.strataBody = body;
-        callback(null, body);
+        env.strataBody = JSON.parse(buffer.toString());
       } catch (e) {
         callback(new strata.Error('Invalid JSON', e), {});
+        return;
       }
+
+      callback(err, env.strataBody);
     });
   } else if (this.parseableData) {
     var contentType = this.contentType || '';
@@ -498,28 +493,15 @@ Request.prototype.body = function (callback) {
         }
       });
     } else {
-      var buffer = '';
-
-      input.on('data', function (chunk) {
-        buffer += chunk.toString('utf8');
-      });
-
-      input.on('end', function () {
-        var body = qs.parse(buffer);
-        env.strataBody = body;
-        callback(null, body);
+      utils.bufferStream(input, function (err, buffer) {
+        env.strataBody = qs.parse(buffer.toString());
+        callback(err, env.strataBody);
       });
     }
   } else {
-    var body = '';
-
-    input.on('data', function (chunk) {
-      body += chunk.toString();
-    });
-
-    input.on('end', function () {
-      env.strataBody = body;
-      callback(null, body);
+    utils.bufferStream(input, function (err, buffer) {
+      env.strataBody = buffer.toString();
+      callback(err, env.strataBody);
     });
   }
 
