@@ -1,5 +1,18 @@
 var http = require('http');
 
+exports.bufferStream = bufferStream;
+function bufferStream(stream, callback) {
+  var buffers = [];
+
+  stream.on('data', function (chunk) {
+    buffers.push(Buffer.isBuffer(chunk) ? chunk : new Buffer(chunk));
+  });
+
+  stream.on('end', function () {
+    callback(null, Buffer.concat(buffers));
+  });
+}
+
 // A map of HTTP status codes to their messages.
 var STATUS_CODES = {};
 exports.STATUS_CODES = STATUS_CODES;
