@@ -1,3 +1,8 @@
+= HEAD
+
+  * Added utils.bufferStream which safely concatenate the contents of streams
+    that may contain multi-byte characters.
+
 = 0.19.3 / 2012-12-21
 
   * Fixed a bug with decoding session cookies when they contained a double
